Fix HTML structure and styling for welcome message

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head>  
         <title>Everyday with Isa</title>
     </head>
     <body>
+        h3 <style="color: purple;">welcome to my blog!</style>
         <a href="#contact">
             <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/profile.jpg" alt="Isa's profile picture">
         </a>
