Add initial content for NYFW blog post

--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>  
+    <head>
         <title>Everyday with Isa</title>
+        <style>
+            /* Page background and readable text colors */
+            body {
+                background-color: purple;
+                color: #ffffff;
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 1rem 2rem;
+            }
+
+            a {
+                color: #fffafa;
+            }
+
+            /* Small visual tweak for images so they don't blend into the background */
+            img {
+                max-width: 100%;
+                height: auto;
+                display: block;
+                margin: 0.5rem 0;
+            }
+        </style>
     </head>
     <body>
-        h3 <style="color: purple;">welcome to my blog!</style>
+    <h3>welcome to my blog!</h3>
         <a href="#contact">
             <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/profile.jpg" alt="Isa's profile picture">
         </a>
-        <h3>by Isabelle Rodriguez | 1 day ago</h3>
+    <h3>by Isabelle Rodriguez | 1 day ago</h3>
+    <p>GitHub: <a href="https://github.com/ben-tech999" target="_blank">ben-tech999</a></p>
         <h1>An Insider’s Guide to NYFW</h1>
         <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/image-one.jpeg" alt="Fashion Week Crowd">
         <p>
