Update emoji display and improve HTML structure

--- a/index.html
+++ b/index.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Everyday with Isa</title>
-        <style>
-            /* Page background and readable text colors */
-            body {
-                background-color: purple;
-                color: #ffffff;
-                font-family: Arial, sans-serif;
-                margin: 0;
-                padding: 1rem 2rem;
-            }
-
-            a {
-                color: #fffafa;
-            }
-
-            /* Small visual tweak for images so they don't blend into the background */
-            img {
-                max-width: 100%;
-                height: auto;
-                display: block;
-                margin: 0.5rem 0;
-            }
-        </style>
-    </head>
-    <body>
-    <h3>welcome to my blog!</h3>
-        <a href="#contact">
-            <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/profile.jpg" alt="Isa's profile picture">
-        </a>
-    <h3>by Isabelle Rodriguez | 1 day ago</h3>
-    <p>GitHub: <a href="https://github.com/ben-tech999" target="_blank">ben-tech999</a></p>
-        <h1>An Insider’s Guide to NYFW</h1>
-        <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/image-one.jpeg" alt="Fashion Week Crowd">
-        <p>
-            <a href="https://en.wikipedia.org/wiki/New_York_Fashion_Week" target="_blank">NYFW</a> can be both amazingly fun &amp; incredibly overwhelming, especially if you’ve never been. Luckily, I’m here to give you an insider’s guide and make your first show a pleasurable experience. By taking my tips and tricks, and following your gut, you’ll have an unforgettable experience!
-        </p>
-        <h2>Getting Tickets &amp; Picking the Shows</h2>
-        <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/image-two.jpeg" alt="Fashion Show Tickets">
-        <p>
-            If you’re lucky or connected you can get an invite, sans the price tag. But I wasn’t so lucky or connected my first 2 years so I’m here to help you out. First, plan out which shows are most important to you and make a schedule and this is a biggie: SET A BUDGET. If you’re worrying about blowing your cash the whole time you won’t have fun. Then check out prices, days, and times and prioritize the designers you want to see most. Lastly, purchase your tickets and get excited!
-        </p>
-        <h2>Dressing for the Shows</h2>
-        <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/image-three.jpeg" alt="Fashionable Shoes">
-        <p>
-            Always be true to your own sense of style, if you don’t you’ll be uncomfortable the whole time and it will show. Remember, NYFW is about expressing yourself and taking in what the designers have chosen to express through their new lines. Also it’s important to wear shoes you’ll be comfortable in all day. Obviously you want to look good, but you’ll be on your feet all day long, so be prepared.
-        </p>
-        <h4>Related Content</h4>
-        <ul>
-            <li>How To Style Boyfriend Jeans</li>
-            <li>When Print Is Too Much</li>
-            <li>The Overalls Trend</li>
-            <li>Fall’s It Color: Blush</li>
-        </ul>
-        <div id="contact">
-            <p>
-                <strong>email</strong>: isa@fashionblog.com | 
-                <strong>phone</strong>: 917-555-1098 | 
-                <strong>address</strong>: 371 284th St, New York, NY, 10001
-            </p>
-        </div>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My Top 20 Favorite Emojis</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background: #f9f9f9;
+        }
+        .emoji-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 40px;
+        }
+        .emoji-item {
+            font-size: 3rem;
+            width: 100px;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #fff;
+            border-radius: 16px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            flex-direction: column;
+        }
+        .emoji-label {
+            font-size: 1rem;
+            margin-top: 8px;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+    <h1>My Top 20 Favorite Emojis</h1>
+    <div class="emoji-list">
+        <div class="emoji-item">&#128515;<div class="emoji-label">Grinning Face</div></div>
+        <div class="emoji-item">&#x1F603;<div class="emoji-label">Smiling Face</div></div>
+        <div class="emoji-item">&#128522;<div class="emoji-label">Smiling Eyes</div></div>
+        <div class="emoji-item">&#128525;<div class="emoji-label">Heart Eyes</div></div>
+        <div class="emoji-item">&#128526;<div class="emoji-label">Sunglasses</div></div>
+        <div class="emoji-item">&#128512;<div class="emoji-label">Beaming Face</div></div>
+        <div class="emoji-item">&#128518;<div class="emoji-label">Laughing</div></div>
+        <div class="emoji-item">&#128521;<div class="emoji-label">Winking</div></div>
+        <div class="emoji-item">&#128536;<div class="emoji-label">Kissing</div></div>
+        <div class="emoji-item">&#128540;<div class="emoji-label">Tongue Out</div></div>
+        <div class="emoji-item">&#128561;<div class="emoji-label">Surprised</div></div>
+        <div class="emoji-item">&#128563;<div class="emoji-label">Crying</div></div>
+        <div class="emoji-item">&#128577;<div class="emoji-label">Sad</div></div>
+        <div class="emoji-item">&#128578;<div class="emoji-label">Slight Smile</div></div>
+        <div class="emoji-item">&#128591;<div class="emoji-label">Praying</div></div>
+        <div class="emoji-item">&#128170;<div class="emoji-label">Flexed Biceps</div></div>
+        <div class="emoji-item">&#128076;<div class="emoji-label">OK Hand</div></div>
+        <div class="emoji-item">&#128079;<div class="emoji-label">Clapping</div></div>
+        <div class="emoji-item">&#128077;<div class="emoji-label">Thumbs Up</div></div>
+        <div class="emoji-item">&#128151;<div class="emoji-label">Sparkling Heart</div></div>
+    </div>
+</body>
 </html>
